complete clustering steps

--- a/cgogn/modeling/apps/CMakeLists.txt
+++ b/cgogn/modeling/apps/CMakeLists.txt
@@ -25,6 +25,7 @@ if (CGOGN_USE_CGAL)
 	find_package(CGAL REQUIRED)
 	add_executable(power_shape power_shape.cpp)
 	target_link_libraries(power_shape highs::highs
+		#NLopt::nlopt
 		CGAL::CGAL
 		cgogn::core
 		cgogn::ui
