--- a/cgogn/modeling/CMakeLists.txt
+++ b/cgogn/modeling/CMakeLists.txt
@@ -40,6 +40,7 @@ set(src_list
 		"${CMAKE_CURRENT_LIST_DIR}/algos/remeshing/pliant_remeshing.h"
 		"${CMAKE_CURRENT_LIST_DIR}/algos/volume_utils.h"
 		"${CMAKE_CURRENT_LIST_DIR}/algos/volume_utils.cpp"
+		
 
 		"${CMAKE_CURRENT_LIST_DIR}/ui_modules/surface_modeling.h"
 		"${CMAKE_CURRENT_LIST_DIR}/ui_modules/surface_deformation.h"
@@ -47,6 +48,7 @@ set(src_list
 		"${CMAKE_CURRENT_LIST_DIR}/ui_modules/tubular_mesh_module.h"
 		"${CMAKE_CURRENT_LIST_DIR}/ui_modules/volume_deformation.h"
 		"${CMAKE_CURRENT_LIST_DIR}/ui_modules/volume_mr_modeling.h"
+		"${CMAKE_CURRENT_LIST_DIR}/ui_modules/reach_for_the_sphere.h"
 )
 target_sources(${PROJECT_NAME} PRIVATE ${src_list})
 source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${src_list})
